2008-05-22  Andreia Gaita <avidigal@novell.com> 

	* tests.mdp, test.html, controls.cs, main.cs: Added WebBrowser api test
	  app
